MC Eternal - Version 1.1

--- a/Client/overrides/config/chiselsandbits.cfg
+++ b/Client/overrides/config/chiselsandbits.cfg
@@ -121,6 +121,7 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorageResource=true
     B:com.bewitchment.common.block.BlockPurifyingEarth=true
     B:com.bewitchment.common.block.util.ModBlock=true
+    B:com.bewitchment.common.block.util.ModBlockOre=true
     B:com.bewitchment.common.block.util.ModBlockPillar=true
     B:com.bewitchment.common.integration.chisel.ModBlockChisel=true
     B:com.blakebr0.mysticalagradditions.blocks.BlockSpecial=true
@@ -337,6 +338,13 @@ crafting {
     B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
     B:sonar.core.common.block.BlockBase=true
     B:sonar.core.common.block.StableStone=true
+    B:sonar.logistics.core.blocks.BlockSapphireOre=true
+    B:svenhjol.charm.automation.block.BlockGunpowder=true
+    B:svenhjol.charm.automation.block.BlockRedstoneSand=true
+    B:svenhjol.charm.automation.block.BlockVariableRedstoneLight=true
+    B:svenhjol.charm.crafting.block.BlockEnderPearl=true
+    B:svenhjol.charm.crafting.block.BlockSmoothGlowstone=true
+    B:svenhjol.charm.world.block.BlockNetherGoldDeposit=true
     B:"team.chisel.Features$33$1"=true
     B:"team.chisel.Features$34$1"=true
     B:"team.chisel.Features$35$1"=true
