--- a/Client/overrides/config/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry.cfg
@@ -312,7 +312,7 @@ spells {
     B:"arcane_essentials:kazammle"=true
 
     # Create a spinning vortex of lightning where you're looking! Lasts about 5 seconds, and sets enemies on fire!
-    B:"arcane_essentials:lightning_vortex"=true
+    B:"arcane_essentials:lightning_vortex"=false
 
     # Unleash a powerful burst of water that blasts enemies away!
     B:"arcane_essentials:ocean_burst"=true
@@ -342,7 +342,7 @@ spells {
     B:"arcane_essentials:thundering_chain"=true
 
     # Create a swirling vortex of water where you're looking within a couple blocks, OR around you! Draws enemies inwards and slowly damanges them- great for trapping mobs for EXPLOSIONS!
-    B:"arcane_essentials:whirlpool"=true
+    B:"arcane_essentials:whirlpool"=false
 
     # Burn enemies with a small bolt of darkness.
     B:"arcane_essentials:zam"=true
