--- a/Client/overrides/config/jei/worldSettings.cfg
+++ b/Client/overrides/config/jei/worldSettings.cfg
@@ -29,6 +29,20 @@ world-1431591077 {
 }
 
 
+world-1446969189 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
 world-1535938722 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
@@ -57,17 +71,10 @@ world-1894996281 {
 
 
 world-1909883461 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@icbm
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -215,6 +222,15 @@ world83274225 {
 world856609915 {
     B:bookmarkOverlayEnabled=false
     B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world923154898 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
     B:overlayEnabled=true
