--- a/Client/overrides/config/oreexcavation.cfg
+++ b/Client/overrides/config/oreexcavation.cfg
@@ -15,7 +15,7 @@ general {
 
     # Blocks blacklisted from being excavated [default: ]
     S:"Block Blacklist" <
-        minecraft:stone
+        minecraft:stone*
         minecraft:netherack
         minecraft:log*
      >
