--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -16,6 +16,9 @@ general {
         Disgraced
         Rat
         Cheese
+        Fear
+        Lord
+        Burning Legion
      >
 
     # Additional names that will be added to the pool of names given to champions
@@ -24,7 +27,8 @@ general {
         Goat
         Emper
         Tea
-        Corj
+        Corjaantje
+        Kraken
      >
 
     # The range an active beacon will prevent champion spawns, 0 to disable
@@ -33,9 +37,10 @@ general {
     # List of mobs that will always spawn as champions, can optionally include specific tier (i.e. 'minecraft:spider;2') or tier range (i.e. 'minecraft:spider;1;3
     S:"Champion Mobs List" <
         ebwizardry:evil_wizard
-        ebwizardry:wizard;2
+        ebwizardry:wizard;4
+        artifacts:mimic;1
         dungeonsmod:deserted;4
-        minecraft:ender_dragon;4
+        minecraft:ender_dragon;2
         dungeonsmod:king;3
         dungeonsmod:sun;4
         thebetweenlands:dreadful_mummy;4
@@ -66,13 +71,13 @@ general {
         atum:*;1;4
         twilightforest:ur_ghast;4
         atum:barbarian;4
-        atum:assassin;5
+        atum:assassin;4
         atum:forsaken;3
         atum:pharaoh;4
         atum:warlord;4
         theaurorian:moonqueen;4
         theaurorian:moonacolyte;3
-        theaurorian:runestonedungeonkeeper;2
+        theaurorian:runestonedungeonkeeper;4
         theaurorian:undeadknight;3
         theaurorian:spirit;4
         theaurorian:spider;4
@@ -204,7 +209,7 @@ general {
             D:"Damage Reduction Increment"=0.15
 
             # The maximum damage reduction
-            D:"Maximum Damage Reduction"=0.9
+            D:"Maximum Damage Reduction"=0.7
         }
 
         ##########################################################################################################
@@ -421,5 +426,4 @@ general {
     }
 
 }
-
 
