--- a/Client/overrides/config/netherportalspread.cfg
+++ b/Client/overrides/config/netherportalspread.cfg
@@ -4,7 +4,7 @@ general {
     # The amount of blocks that are instantly converted to a nether block around a portal when it is detected. If there are existing nether blocks within the radius, their count is substracted from this number.
     # Min: 0
     # Max: 1000
-    I:instantConvertAmount=50
+    I:instantConvertAmount=60
 
     # The message sent when a portal is broken.
     S:messageOnPortalBroken=With the nether portal broken, the corrupted energy is no longer able to enter the overworld.
@@ -18,7 +18,7 @@ general {
     # The radius around the portal to which the nether blocks can spread.
     # Min: 1
     # Max: 100
-    I:portalSpreadRadius=30
+    I:portalSpreadRadius=60
 
     # When enabled, shows the portal coordinates in portal messages.
     B:prefixPortalCoordsInMessage=true
@@ -27,7 +27,7 @@ general {
     I:preventSpreadBlockAmountNeeded=4
 
     # The block which prevents the nether portal from spreading. By default a coal block (minecraft:coal_block is the namespace ID).
-    S:preventSpreadBlockString=minecraft:coal_block
+    S:preventSpreadBlockString=ebwizardry:crystal_block
 
     # When enabled, blocks the spread effect when there are n (defined) prevent-spread-blocks (defined) within the radius.
     B:preventSpreadWithBlock=true
