--- a/Client/overrides/config/midnight.cfg
+++ b/Client/overrides/config/midnight.cfg
@@ -46,6 +46,8 @@ general {
         # Mobs on this blacklist cannot be captured by rifters. Format is mod id:name of creature, just use the mod id to blacklist everything from it. Default= iceandfire, midnight:nightstag
         S:not_capturable_animals <
             iceandfire
+            rats
+            doggytalents
             midnight:nightstag
          >
 
@@ -60,7 +62,7 @@ general {
         # The rarity that rifts spawn rifters. Larger numbers increase rarity. If 0, rifters don't spawn. Default= 1000
         # Min: 0
         # Max: 10000
-        I:rifter_spawn_rarity=1000
+        I:rifter_spawn_rarity=500
     }
 
     ##########################################################################################################
