--- a/Client/overrides/config/midnight.cfg
+++ b/Client/overrides/config/midnight.cfg
@@ -55,12 +55,12 @@ general {
         I:rift_spawn_rarity=1300
 
         # Allows rifters to capture tamed entities and drag them into rifts. Default= false
-        B:rifter_capture_tamed_animal=true
+        B:rifter_capture_tamed_animal=false
 
         # The rarity that rifts spawn rifters. Larger numbers increase rarity. If 0, rifters don't spawn. Default= 1000
         # Min: 0
         # Max: 10000
-        I:rifter_spawn_rarity=1000
+        I:rifter_spawn_rarity=500
     }
 
     ##########################################################################################################
