--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -11,7 +11,7 @@
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
   "name": "MC Eternal",
-  "version": "1.4.3 staging",
+  "version": "1.4.2 Beta",
   "author": "adam98991",
   "files": [
     {
