--- a/Client/overrides/config/oreexcavation.cfg
+++ b/Client/overrides/config/oreexcavation.cfg
@@ -18,7 +18,7 @@ general {
         minecraft:stone
         minecraft:dirt
         minecraft:grass
-        minecraft:netherack
+        minecraft:netherrack
         minecraft:log*
      >
 
