--- a/Client/overrides/config/ancientwarfare/AncientWarfareVehicle.cfg
+++ b/Client/overrides/config/ancientwarfare/AncientWarfareVehicle.cfg
@@ -11,7 +11,7 @@ general {
     "general settings" {
         # Determines whether vehicle shots can hurt friendly (player owned or allied) NPCs and friendly players
         # Affect both client and server. These configs must match for client and server, or strange and probably BAD things WILL happen.
-        B:allow_friendly_fire=true
+        B:allow_friendly_fire=false
 
         # Determines the % chance how successfully the Battering Ram can break blocks, applies to each block individually in it's breaking radius. Doesn't affect it's ability to breach gates. Disregarded if batteringRamBreaksBlocks is false
         # Affect both client and server. These configs must match for client and server, or strange and probably BAD things WILL happen.
@@ -84,72 +84,72 @@ general {
         # Ballista Bolt damage
         # Min: 6
         # Max: 80
-        I:ammo_ballista_bolt_damage=800
+        I:ammo_ballista_bolt_damage=18
 
         # Ballista Explosive Bolt damage
         # Min: 6
         # Max: 80
-        I:ammo_ballista_bolt_explosive_damage=1000
+        I:ammo_ballista_bolt_explosive_damage=15
 
         # Ballista Flame Bolt damage
         # Min: 6
         # Max: 80
-        I:ammo_ballista_bolt_flame_damage=800
+        I:ammo_ballista_bolt_flame_damage=16
 
         # Ballista Iron Bolt damage
         # Min: 6
         # Max: 80
-        I:ammo_ballista_bolt_iron_damage=850
+        I:ammo_ballista_bolt_iron_damage=30
 
         # Canister Damage (Cannon ammo)
         # Min: 6
         # Max: 80
-        I:ammo_canister_damage=800
+        I:ammo_canister_damage=8
 
         # Cannon Ball 10kg Damage
         # Min: 6
         # Max: 80
-        I:ammo_cannon_ball_10kg_damage=50
+        I:ammo_cannon_ball_10kg_damage=15
 
         # Cannon Ball 15kg Damage
         # Min: 6
         # Max: 80
-        I:ammo_cannon_ball_15kg_damage=440
+        I:ammo_cannon_ball_15kg_damage=30
 
         # Cannon Ball 25kg Damage
         # Min: 6
         # Max: 80
-        I:ammo_cannon_ball_25kg_damage=688
+        I:ammo_cannon_ball_25kg_damage=45
 
         # Cannon Ball 5kg Damage
         # Min: 6
         # Max: 80
-        I:ammo_cannon_ball_5kg_damage=30
+        I:ammo_cannon_ball_5kg_damage=10
 
         # Hwacha Rocket Damage
         # Min: 1
         # Max: 80
-        I:ammo_hwacha_rocket_damage=1500
+        I:ammo_hwacha_rocket_damage=6
 
         # Hwacha Rocket Explosive Damage
         # Min: 1
         # Max: 80
-        I:ammo_hwacha_rocket_explosive_damage=80
+        I:ammo_hwacha_rocket_explosive_damage=4
 
         # Hwacha Rocket Flame Damage
         # Min: 1
         # Max: 80
-        I:ammo_hwacha_rocket_flame_damage=80
+        I:ammo_hwacha_rocket_flame_damage=5
 
         # Determines the health of the Ballista Boat vehicle
         # Min: 50
         # Max: 500
-        I:vehicle_ballista_health=500
+        I:vehicle_ballista_health=100
 
         # Determines the health of the Battering Ram vehicle
         # Min: 50
         # Max: 500
-        I:"vehicle_battering_ram_health "=500
+        I:"vehicle_battering_ram_health "=100
 
         # Determines the health of the Cannon vehicles (mobile fixed, stand turret and stand fixed). There is no Boat Cannon in the mod.
         # Min: 50
@@ -174,17 +174,17 @@ general {
         # Determines the health of the Giant Trebuchet vehicle
         # Min: 50
         # Max: 500
-        I:vehicle_giant_trebuchet_health=500
+        I:vehicle_giant_trebuchet_health=175
 
         # Determines the health of the Hwacha vehicle
         # Min: 50
         # Max: 500
-        I:vehicle_hwacha_health=500
+        I:vehicle_hwacha_health=100
 
         # Determines the health of the Trebuchet vehicles (mobile fixed, stand turret and stand fixed)
         # Min: 50
         # Max: 500
-        I:vehicle_trebuchet_health=500
+        I:vehicle_trebuchet_health=100
     }
 
 }
