--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1638,6 +1638,15 @@
       "projectID": 364129,
       "fileID": 2946161,
       "required": true
+    },
+    { "projectID": 278398,
+      "fileID": 2567799,
+      "required": true
+    },
+    {
+      "projectID": 421605,
+      "fileID": 3156145,
+      "required": true
     }
   ],
   "overrides": "overrides"
