--- a/Client/overrides/config/ebwizardry/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry/ebwizardry.cfg
@@ -1261,7 +1261,7 @@ spells {
     B:"ebwizardry:greater_heal"=true
 
     # Set to false to disable this spell
-    B:"ebwizardry:greater_telekinesis"=true
+    B:"ebwizardry:greater_telekinesis"=false
 
     # Set to false to disable this spell
     B:"ebwizardry:greater_ward"=true
@@ -1552,7 +1552,7 @@ spells {
     B:"ebwizardry:summon_zombie"=true
 
     # Set to false to disable this spell
-    B:"ebwizardry:telekinesis"=true
+    B:"ebwizardry:telekinesis"=false
 
     # Set to false to disable this spell
     B:"ebwizardry:thunderbolt"=true
