--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -3,32 +3,10 @@
 general {
     # Additional name suffixes that will be added to the pool of names given to champions
     S:"Additional Champion Name Suffixes" <
-        Eternal
-        Suffering
-        Destroyer
-        Ethereal
-        Moon
-        World-Eater
-        Erebus
-        Primordium
-        Undying
-        Beast
-        Disgraced
-        Rat
-        Cheese
-        Fear
-        Lord
-        Burning Legion
      >
 
     # Additional names that will be added to the pool of names given to champions
     S:"Additional Champion Names" <
-        Quack
-        Goat
-        Emper
-        Bread-Tea
-        Corjaantje
-        Kraken
      >
 
     # The range an active beacon will prevent champion spawns, 0 to disable
@@ -36,52 +14,24 @@ general {
 
     # List of mobs that will always spawn as champions, can optionally include specific tier (i.e. 'minecraft:spider;2') or tier range (i.e. 'minecraft:spider;1;3
     S:"Champion Mobs List" <
-        ebwizardry:evil_wizard
-        ebwizardry:wizard;4
-        artifacts:mimic;1
-        dungeonsmod:deserted;4
-        minecraft:ender_dragon;1
-        dungeonsmod:king;3
-        dungeonsmod:sun;4
-        thebetweenlands:dreadful_mummy;1
-        minecraft:wither;2
-        primitivemobs:trollager;2
-        twilightforest:naga;1
+        minecraft:wither;3
+        minecraft:ender_dragon;2
+        twilightforest:naga;2
         twilightforest:lich;2
-        twilightforest:hydra;4
+        twilightforest:hydra;2
+        twilightforest:snow_queen;3
+        twilightforest:ur_ghast;1
         twilightforest:minoshroom;3
-        iceandfire:myrmex_queen;3
-        twilightforest:yeti_alpha;2
-        twilightforest:giant_miner;4
-        iceandfire:gorgon;1
-        twilightforest:snow_queen;2
-        illagers_plus:illager_king;3
-        midnight:tree_hopper;3
-        midnight:rifter;1
-        iceandfire:if_hydra;3
-        twilightforest:tower_golem;3
-        atum:sunspeaker;3
-        atum:wraith;4
-        twilightforest:wraith;1
-        atum:mummy;3
-        ancientwarfarenpc:faction.archer.elite;1
-        ancientwarfarenpc:faction.leader.elite;4
-        ancientwarfarenpc:faction.leader;3
-        atum:*;1;4
-        twilightforest:ur_ghast;4
-        atum:barbarian;4
-        atum:assassin;4
-        atum:forsaken;3
-        atum:pharaoh;4
-        atum:warlord;4
+        twilightforest:yeti_alpha;3
+        twilightforest:giant_miner;2
+        twilightforest:armored_giant;4
+        theaurorian:runestonedungeonkeeper;2
+        theaurorian:spider;3
         theaurorian:moonqueen;4
-        theaurorian:moonacolyte;3
-        theaurorian:runestonedungeonkeeper;4
-        theaurorian:undeadknight;3
-        theaurorian:spirit;4
-        theaurorian:spider;4
-        erebus:erebus.crushroom;3
-        erebus:erebus.antlion_boss;4
+        erebus:erebus.crushroom;2
+        erebus:erebus.tarantula_mini_boss;2
+        erebus:erebus.antlion_boss;3
+        atum:pharaoh;4
      >
 
     # Set whether champions can spawn from mob spawners
@@ -108,13 +58,10 @@ general {
 
     # Sets the loot drops from champions if loot source is set to CONFIG, format is tier;modid:name;metadata;stacksize;enchant(true/false);weight
     S:"Loot Drops" <
-        rats:cheese;5
-        minecraft:diamond;1
-        minecraft:gold_ingot;3
      >
 
     # True if fake players can cause champion loot drops, otherwise false
-    B:"Loot Drops From Fake Players"=false
+    B:"Loot Drops From Fake Players"=true
 
     # Set whether champion mobs drop loot from the loot table, config, or both
     # Valid values:
@@ -125,7 +72,6 @@ general {
 
     # Set which mobs are blacklisted or whitelisted for champion mobs, leave blank to disable this option
     S:"Mob List" <
-        aether_legacy:sun_spirit
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
@@ -166,25 +112,25 @@ general {
 
     "growth settings" {
         # The increase in armor multiplied by the growth factor
-        D:Armor=4.0
+        D:Armor=1.0
 
         # The increase in armor toughness multiplied by the growth factor
-        D:"Armor Toughness"=2.0
+        D:"Armor Toughness"=0.25
 
         # The percent increase in attack damage multiplied by the growth factor
-        D:"Attack Damage"=0.9
+        D:"Attack Damage"=1.0
 
         # The increase in creeper explosion strength multiplied by tier, NOT by growth factor
         I:"Creeper Explosion Strength"=16
 
         # The increase in experience multiplied by the growth factor
-        D:Experience=2.0
+        D:Experience=1.5
 
         # The percent increase in health multiplied by the growth factor
         D:Health=2
 
         # The increase in knockback resistance multiplied by the growth factor
-        D:"Knockback Resistance"=0.06
+        D:"Knockback Resistance"=0.05
     }
 
     ##########################################################################################################
@@ -208,7 +154,7 @@ general {
             D:"Damage Reduction Increment"=0.15
 
             # The maximum damage reduction
-            D:"Maximum Damage Reduction"=0.7
+            D:"Maximum Damage Reduction"=0.9
         }
 
         ##########################################################################################################
@@ -218,6 +164,17 @@ general {
         ##########################################################################################################
 
         arctic {
+            # How often the champion will shoot projectiles (in ticks)
+            I:"Attack Interval"=20
+        }
+
+        ##########################################################################################################
+        # cinder
+        #--------------------------------------------------------------------------------------------------------#
+        # Settings for the Cinder affix
+        ##########################################################################################################
+
+        cinder {
             # How often the champion will shoot projectiles (in ticks)
             I:"Attack Interval"=20
         }
@@ -261,7 +218,7 @@ general {
 
         hasty {
             # The base movement speed bonus
-            D:"Movement Bonus"=0.27
+            D:"Movement Bonus"=0.25
         }
 
         ##########################################################################################################
@@ -281,7 +238,7 @@ general {
             I:"Silverfish Spawn Interval"=60
 
             # The total amount of silverfish a champion can house at once
-            I:"Silverfish Total Amount"=13
+            I:"Silverfish Total Amount"=20
         }
 
         ##########################################################################################################
@@ -317,10 +274,21 @@ general {
             I:"Cooldown on Attacked"=3
 
             # The amount of health per second regeneration
-            D:"Heal Amount"=3.0
+            D:"Heal Amount"=1.0
 
             # Multiplier to health regeneration when not aggressive
             D:"Passive Multiplier"=5.0
+        }
+
+        ##########################################################################################################
+        # molten
+        #--------------------------------------------------------------------------------------------------------#
+        # Settings for the Molten affix
+        ##########################################################################################################
+
+        molten {
+            # Whether or not champions are damaged by water
+            B:Water-Resistant=false
         }
 
         ##########################################################################################################
@@ -331,7 +299,7 @@ general {
 
         plagued {
             # The potion that will be spread through the plague effect
-            S:"Infection Potion"=rats:plague
+            S:"Infection Potion"=minecraft:poison
 
             # The duration (in ticks) of the infection potion
             I:"Infection Potion Duration"=200
@@ -357,10 +325,10 @@ general {
             B:"Enable Killing Blow"=true
 
             # The maximum amount of damage to reflect back
-            D:"Maximum Damage"=1000.0
+            D:"Maximum Damage"=100.0
 
             # The maximum percent of damage to reflect back
-            D:"Maximum Percent of Damage"=0.45
+            D:"Maximum Percent of Damage"=0.35
 
             # The minimum percent of damage to reflect back
             D:"Minimum Percent of Damage"=0.1
@@ -378,28 +346,6 @@ general {
         }
 
         ##########################################################################################################
-        # cinder
-        #--------------------------------------------------------------------------------------------------------#
-        # Settings for the Cinder affix
-        ##########################################################################################################
-
-        cinder {
-            # How often the champion will shoot projectiles (in ticks)
-            I:"Attack Interval"=20
-        }
-
-        ##########################################################################################################
-        # molten
-        #--------------------------------------------------------------------------------------------------------#
-        # Settings for the Molten affix
-        ##########################################################################################################
-
-        molten {
-            # Whether or not champions are damaged by water
-            B:Water-Resistant=false
-        }
-
-        ##########################################################################################################
         # vortex
         #--------------------------------------------------------------------------------------------------------#
         # Settings for the Vortex affix
@@ -407,7 +353,7 @@ general {
 
         vortex {
             # The strength of the vortex pulling effect
-            D:"Vortex Strength"=0.04
+            D:"Vortex Strength"=0.05
         }
 
     }
