Undo name changes

--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -3,10 +3,32 @@
 general {
     # Additional name suffixes that will be added to the pool of names given to champions
     S:"Additional Champion Name Suffixes" <
+		Eternal
+        Suffering
+        Destroyer
+        Ethereal
+        Moon
+        World-Eater
+        Erebus
+        Primordium
+        Undying
+        Beast
+        Disgraced
+        Rat
+        Cheese
+        Fear
+        Lord
+        Burning Legion
      >
 
     # Additional names that will be added to the pool of names given to champions
     S:"Additional Champion Names" <
+		Quack
+        Goat
+        Emper
+        Bread-Tea
+        Corjaantje
+        Kraken
      >
 
     # The range an active beacon will prevent champion spawns, 0 to disable
