--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -54,6 +54,7 @@ general {
         erebus:erebus.tarantula_mini_boss;2
         erebus:erebus.antlion_boss;3
         atum:pharaoh;4
+		illagers_plus:illager_king;3
      >
 
     # Set whether champions can spawn from mob spawners
