--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -81,10 +81,13 @@ general {
 
     # Sets the loot drops from champions if loot source is set to CONFIG, format is tier;modid:name;metadata;stacksize;enchant(true/false);weight
     S:"Loot Drops" <
+		rats:cheese;5
+        minecraft:diamond;1
+        minecraft:gold_ingot;3
      >
 
     # True if fake players can cause champion loot drops, otherwise false
-    B:"Loot Drops From Fake Players"=true
+    B:"Loot Drops From Fake Players"=false
 
     # Set whether champion mobs drop loot from the loot table, config, or both
     # Valid values:
