--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -325,7 +325,7 @@ general {
 
         plagued {
             # The potion that will be spread through the plague effect
-            S:"Infection Potion"=minecraft:poison
+            S:"Infection Potion"=rats:plague
 
             # The duration (in ticks) of the infection potion
             I:"Infection Potion Duration"=200
