--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1647,6 +1647,11 @@
       "projectID": 421605,
       "fileID": 3156145,
       "required": true
+    },
+    {
+      "projectID": 400488,
+      "fileID": 3024769,
+      "required": true
     }
   ],
   "overrides": "overrides"
