Buff Aurorian Steel Tinkers' Material
I would suggest testing on full MCE, these stats were built in Lite and will be somewhat different here, if you want me to change something pin me in the discord.

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -75,6 +75,7 @@ miscelleaneous {
         certusquartz:material:12.0:15.0:0.85:5.0:0.0:3.5
         appliedenergistics2:certusquartz:12.0:15.0:0.85:5.0:0.0:3.5
         certusquartz::12.0:15.0:0.85:5.0:0.0:3.5
+        auroriansteel:80.0:240.0:3.0:12.0:2.0:20
      >
 
     # Here you can change the stats of specific materials, this takes priority over the percentage nerfs.
@@ -122,6 +123,7 @@ miscelleaneous {
     # Set any value to d to keep it as the default value. [default: [stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0]]
     S:"Stat Tweaks" <
         stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0
+        auroriansteel:900:30.0:40:8:2.5:40:200:1.8:5.0:20.0
      >
 }
 
