Override Ice Dragonsteel, Vibranium, and Soularium part traits to remove issues

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -145,7 +145,16 @@ miscelleaneous {
         obsidiorite:all:dark
         iridium:all:heavy
         vibrant_alloy:all:heavy
-        ice_dragonsteel:all:heavy
+        dragonsteel_ice:head:heavy
+		dragonsteel_ice:handle:sharp
+		dragonsteel_ice:extra:sharp
+		vibranium:all:dense
+		vibranium:head:dense
+		vibranium:extra:resonance
+		vibranium:handle:resonance
+		soularium:all:flammable
+		soularium:extra:splinters
+		soularium:head:hellish
      >
 }
 
