--- a/Client/overrides/config/netherportalspread.cfg
+++ b/Client/overrides/config/netherportalspread.cfg
@@ -18,7 +18,8 @@ general {
     # The radius around the portal to which the nether blocks can spread.
     # Min: 1
     # Max: 100
-    I:portalSpreadRadius=60
+    # Set to 10 because this can cause massive server lag!
+    I:portalSpreadRadius=10
 
     # When enabled, shows the portal coordinates in portal messages.
     B:prefixPortalCoordsInMessage=true
