Further specify what block of crystal is needed to stop portal spread
alleviates a question that we're getting on the discord all the time

--- a/Client/overrides/config/netherportalspread.cfg
+++ b/Client/overrides/config/netherportalspread.cfg
@@ -10,10 +10,10 @@ general {
     S:messageOnPortalBroken=With the nether portal broken, the corrupted energy is no longer able to enter the overworld.
 
     # The message sent on portal creation.
-    S:messageOnPortalCreation=You feel a corrupted energy coming from the portal. The nether will slowly spread into the overworld unless %preventSpreadBlockAmountNeeded% Blocks of Crystal are placed within a %portalSpreadRadius% block radius around the portal.
+    S:messageOnPortalCreation=You feel a corrupted energy coming from the portal. The nether will slowly spread into the overworld unless %preventSpreadBlockAmountNeeded% Magic Crystal Blocks are placed within a %portalSpreadRadius% block radius around the portal.
 
     # The message sent on preventspread blocks found.
-    S:messageOnPreventSpreadBlocksFound=With enough %preventSpreadBlockString% placed, you feel the corrupted energy fade.
+    S:messageOnPreventSpreadBlocksFound=With enough Magic Crystal Blocks placed, you feel the corrupted energy fade.
 
     # The radius around the portal to which the nether blocks can spread.
     # Min: 1
