--- a/Client/overrides/config/netherportalspread.cfg
+++ b/Client/overrides/config/netherportalspread.cfg
@@ -10,7 +10,7 @@ general {
     S:messageOnPortalBroken=With the nether portal broken, the corrupted energy is no longer able to enter the overworld.
 
     # The message sent on portal creation.
-    S:messageOnPortalCreation=You feel a corrupted energy coming from the portal. The nether will slowly spread into the overworld unless %preventSpreadBlockAmountNeeded% Blocks of Crystal are placed within a %portalSpreadRadius% block radius around the portal.
+    S:messageOnPortalCreation=You feel a corrupted energy coming from the portal. The nether will slowly spread into the overworld unless %preventSpreadBlockAmountNeeded% Blocks of Crystal from Electroblob's Wizardry are placed within a %portalSpreadRadius% block radius around the portal.
 
     # The message sent on preventspread blocks found.
     S:messageOnPreventSpreadBlocksFound=With enough %preventSpreadBlockString% placed, you feel the corrupted energy fade.
