--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -1359,6 +1359,7 @@ modpacks {
         refinedstorage:disk_drive
         parabox:parabox
         immersivengineering:metal_device1
+        astralsorcery:blockcollectorcrystal
      >
 
     # Crops & leaves that are blocked from harvesting (Brush Scythe and Tree Scythe). A star is for a wildcard  [default: [terraqueous:pergola], [harvestcraft:*_sapling]]
