--- a/Client/overrides/config/rftools/rftools.cfg
+++ b/Client/overrides/config/rftools/rftools.cfg
@@ -1608,13 +1608,13 @@ shield {
     S:shieldDamage=5.0
 
     # Maximum RF storage that the shield block can hold [range: 0 ~ 2147483647, default: 200000]
-    I:shieldMaxRF=200000
+    I:shieldMaxRF=5000000
 
     # Maximum size (in blocks) of a tier 1 shield [range: 0 ~ 1000000, default: 256]
     I:shieldMaxSize=256
 
     # RF per tick that the shield block can receive [range: 0 ~ 2147483647, default: 5000]
-    I:shieldRFPerTick=500000
+    I:shieldRFPerTick=5000000
 
     # Base amount of RF/tick for every 10 blocks in the shield (while active) [range: 0 ~ 2147483647, default: 8]
     I:shieldRfBase=800
