--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -3,7 +3,7 @@
 general {
     # Additional name suffixes that will be added to the pool of names given to champions
     S:"Additional Champion Name Suffixes" <
-		Eternal
+	Eternal
         Suffering
         Destroyer
         Ethereal
@@ -23,7 +23,7 @@ general {
 
     # Additional names that will be added to the pool of names given to champions
     S:"Additional Champion Names" <
-		Quack
+	Quack
         Goat
         Emper
         Bread-Tea
@@ -54,7 +54,7 @@ general {
         erebus:erebus.tarantula_mini_boss;2
         erebus:erebus.antlion_boss;3
         atum:pharaoh;4
-		illagers_plus:illager_king;3
+	illagers_plus:illager_king;3
      >
 
     # Set whether champions can spawn from mob spawners
@@ -98,6 +98,7 @@ general {
 
     # Set which mobs are blacklisted or whitelisted for champion mobs, leave blank to disable this option
     S:"Mob List" <
+    	botania:doppleganger
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
