Rebalance/Fix problematic material traits harder
mmm yes
starmetal adjustment is questionable, yell at Adam about if we should keep I'm a Superstar on it.

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -141,20 +141,38 @@ miscelleaneous {
     # The syntax is: MaterialID:Parts:Trait1,Trait2,etc.
     # To keep all existing traits add ":false" at the end [default: [paper:all:tasty], [paper:head:cheap], [paper:handle:autosmelt], [paper:extra:holy,hellish], [paper:bow:coldblooded], [paper:bowstring:crude], [paper:projectile:dense], [paper:shaft:heavy], [paper:fletching:alien]]
     S:"Trait tweaks" <
-        starmetal:all:dark
+	starmetal:head:im_a_superstar
+	starmetal:handle:illuminati
+	starmetal:extra:illuminati
+	starmetal:core:heavy_armor
+	starmetal:plates:heavy_armor
+	starmetal:trim:dark
         obsidiorite:all:dark
         iridium:all:heavy
+	iridium:core:heavy_armor,shielding_armor
+	iridium:plates:heavy_armor
+	iridium:trim:steady_armor
         vibrant_alloy:all:heavy
-        dragonsteel_ice:head:heavy
-		dragonsteel_ice:handle:sharp
-		dragonsteel_ice:extra:sharp
-		vibranium:all:dense
-		vibranium:head:dense
-		vibranium:extra:resonance
-		vibranium:handle:resonance
-		soularium:all:flammable
-		soularium:extra:splinters
-		soularium:head:hellish
+	vibrant_alloy:head:enderport-0
+	vibrant_alloy:core:enderport_armor
+	vibrant_alloy:plates:enderport_armor
+	vibrant_alloy:trim:steady_armor
+	dragonsteel_ice:head:freezing
+	dragonsteel_ice:handle:heavy
+	dragonsteel_ice:extra:heavy
+	dragonsteel_ice:core:indomitable_armor
+	dragonsteel_ice:plates:prideful_armor
+	dragonsteel_ice:trim:steady_armor
+	vibranium:all:dense
+	vibranium:head:dense
+	vibranium:extra:resonance
+	vibranium:handle:resonance
+	soularium:all:flammable
+	soularium:extra:splinters
+	soularium:head:hellish
+	soularium:core:superhot_armor
+	soularium:plates:infernal_armor
+	soularium:trim:vengeful_armor
      >
 }
 
