--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -75,7 +75,8 @@ miscelleaneous {
         certusquartz:material:12.0:15.0:0.85:5.0:0.0:3.5
         appliedenergistics2:certusquartz:12.0:15.0:0.85:5.0:0.0:3.5
         certusquartz::12.0:15.0:0.85:5.0:0.0:3.5
-        auroriansteel:400.0:240.0:3.0:12.0:2.0:20
+		auroriansteel:400.0:240.0:3.0:12.0:2.0:20
+		jade:300.0:200.0:30.0:100:20.0:75
      >
 
     # Here you can change the stats of specific materials, this takes priority over the percentage nerfs.
@@ -123,7 +124,8 @@ miscelleaneous {
     # Set any value to d to keep it as the default value. [default: [stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0]]
     S:"Stat Tweaks" <
         stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0
-        auroriansteel:1200:30.0:40:7:2.5:40:200:1.8:5.0:20.0
+		auroriansteel:12000:30.0:40:7:2.5:40:200:0.8:5.0:30.0
+		jade:8000:24.0:60:7:3.0:200:300:1:7.5:120.0
      >
 }
 
@@ -148,6 +150,12 @@ miscelleaneous {
         iridium:all:heavy
         vibrant_alloy:all:heavy
         ice_dragonsteel:all:heavy
+		jade:head:jaded,crumbling
+		jade:handle:jaded
+		jade:extra:jaded
+		jade:core:mundane2_armor
+		jade:plates:invigorating_armor
+		jade:trim:ambitious_armor
      >
 }
 
