--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -26,6 +26,7 @@ general {
 	Quack
         Goat
         Emper
+	Sparklez
         Bread-Tea
         Corjaantje
         Kraken
@@ -40,6 +41,7 @@ general {
         minecraft:ender_dragon;2
         twilightforest:naga;2
         twilightforest:lich;2
+	ebwizardry:phoenix;3
         twilightforest:hydra;2
         twilightforest:snow_queen;3
         twilightforest:ur_ghast;1
