put unidict iron ingot recipe remove here too, not just in #183

--- a/Client/overrides/config/unidict/UniDict.cfg
+++ b/Client/overrides/config/unidict/UniDict.cfg
@@ -250,6 +250,7 @@ resources {
     # Note: This will be executed after Crafting Integration.
     # Note 2: If there is a space on the end of the recipe, then the recipe name must stay in "recipename", this is ONLY required when there is a space on the end " " [default: ]
     S:recipeToRemoveList <
+		unidict:ingotiron_x6_shape.aaaa aaaa
      >
 
     # Resources to be black-listed.
