Fix problematic tinkers' traits better
only Gaia and Obsidiorite had Weapon Alien, but with this, they don't :>
also minor change to gaia with mana repair trait, so yeah.

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -141,22 +141,18 @@ miscelleaneous {
     # The syntax is: MaterialID:Parts:Trait1,Trait2,etc.
     # To keep all existing traits add ":false" at the end [default: [paper:all:tasty], [paper:head:cheap], [paper:handle:autosmelt], [paper:extra:holy,hellish], [paper:bow:coldblooded], [paper:bowstring:crude], [paper:projectile:dense], [paper:shaft:heavy], [paper:fletching:alien]]
     S:"Trait tweaks" <
-	starmetal:head:im_a_superstar
-	starmetal:handle:illuminati
-	starmetal:extra:illuminati
-	starmetal:core:heavy_armor
-	starmetal:plates:heavy_armor
-	starmetal:trim:dark
-        obsidiorite:all:dark
-        iridium:all:heavy
-	iridium:core:heavy_armor,shielding_armor
-	iridium:plates:heavy_armor
-	iridium:trim:steady_armor
-        vibrant_alloy:all:heavy
-	vibrant_alloy:head:enderport-0
-	vibrant_alloy:core:enderport_armor
-	vibrant_alloy:plates:enderport_armor
-	vibrant_alloy:trim:steady_armor
+	gaia:head:alien,payback
+	gaia:handle:alien,payback
+	gaia:extra:alien,payback
+	gaia:core:alien_armor,manarepair
+	gaia:plates:alien_armor,manarepair
+	gaia:trim:alien_armor,manarepair
+	obsidiorite:head:alien
+	obsidiorite:handle:alien
+	obsidiorite:extra:alien
+	obsidiorite:core:alien_armor
+	obsidiorite:plates:alien_armor
+	obsidiorite:trim:alien_armor
 	dragonsteel_ice:head:freezing
 	dragonsteel_ice:handle:heavy
 	dragonsteel_ice:extra:heavy
