Tweak stats and a *few* more traits :>
will fiddle with Bow stats later since they were being weird last time i booted to test.

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -75,8 +75,8 @@ miscelleaneous {
         certusquartz:material:12.0:15.0:0.85:5.0:0.0:3.5
         appliedenergistics2:certusquartz:12.0:15.0:0.85:5.0:0.0:3.5
         certusquartz::12.0:15.0:0.85:5.0:0.0:3.5
-		auroriansteel:400.0:240.0:3.0:12.0:2.0:20
-		jade:300.0:200.0:30.0:100:20.0:75
+	auroriansteel:300.0:215.0:3.0:12.0:2.0:20
+	jade:250.0:200.0:10.0:100:15.0:75
      >
 
     # Here you can change the stats of specific materials, this takes priority over the percentage nerfs.
@@ -124,8 +124,8 @@ miscelleaneous {
     # Set any value to d to keep it as the default value. [default: [stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0]]
     S:"Stat Tweaks" <
         stone:90:3.0:3:1:0.5:-87:15:5.0:0.4:-1.0
-		auroriansteel:12000:30.0:40:7:2.5:40:200:0.8:5.0:30.0
-		jade:8000:24.0:60:7:3.0:200:300:1:7.5:120.0
+	auroriansteel:12000:30.0:40:7:2.5:40:200:0.8:5.0:30.0
+	jade:8000:24.0:60:7:3.0:200:300:2.0:7.5:120.0
      >
 }
 
@@ -150,12 +150,20 @@ miscelleaneous {
         iridium:all:heavy
         vibrant_alloy:all:heavy
         ice_dragonsteel:all:heavy
-		jade:head:jaded,crumbling
-		jade:handle:jaded
-		jade:extra:jaded
-		jade:core:mundane2_armor
-		jade:plates:invigorating_armor
-		jade:trim:ambitious_armor
+	jade:head:jaded,crumbling,botanical2,morganlefay
+	jade:handle:jaded,naturebound,crude2,slaughtering
+	jade:extra:jaded,naturebound,crude2,analysing
+	jade:bow:jaded,ratty,enderport-2
+	jade:core:alien_armor,mundane2_armor,petravidity_armor,camdaibay_armor
+	jade:plates:alien_armor,shielding_armor,invigorating_armor
+	jade:trim:alien_armor,ambitious_armor
+	auroriansteel:head:aurorianempowered,alien,thaumic,sassy,insatiable
+	auroriansteel:handle:aurorianempowered,alien,thaumic,shocking,precipitate
+	auroriansteel:extra:aurorianempowered,alien,thaumic,shocking,precipitate
+	auroriansteel:bow:aurorianempowered,alien,shocking,illuminati
+	auroriansteel:core:alien_armor,mundane2_armor,dramatic_armor,blessed_armor
+	auroriansteel:plates:alien_armor,shielding_armor,steady_armor
+	auroriansteel:trim:alien_armor,ambitious_armor
      >
 }
 
