--- a/Client/overrides/config/thebetweenlands/config.cfg
+++ b/Client/overrides/config/thebetweenlands/config.cfg
@@ -161,6 +161,25 @@ general {
 
     # A list of items that should turn into Rotten Food in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
     S:rotten_food_blacklist <
+        artifacts:everlasting_clownfish
+        artifacts:everlasting_cooked_rabbit
+        artifacts:everlasting_cooked_rabbit
+        artifacts:everlasting_mutton
+        artifacts:everlasting_cooked_mutton
+        artifacts:everlasting_rabbit_stew
+        artifacts:everlasting_cod
+        artifacts:everlasting_cooked_cod
+        artifacts:everlasting_salmon
+        artifacts:everlasting_cooked_salmon
+        artifacts:everlasting_porkchop
+        artifacts:everlasting_cooked_porkchop
+        artifacts:everlasting_beef
+        artifacts:everlasting_cooked_beef
+        artifacts:everlasting_chicken
+        artifacts:everlasting_cooked_chicken
+        artifacts:everlasting_rotten_flesh
+        artifacts:everlasting_spider_eye
+        artifacts:everlasting_rabbit
      >
 
     # A list of items that should be whitelisted from rotting in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
