Add Tips mod + 8 Custom tips
Can be used to tell the player about custom changes and stuff on the loading screen, as shown by the examples in the config originally made for MCE Lite.

--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1637,7 +1637,12 @@
       "projectID": 400488,
       "fileID": 3024769,
       "required": true
-    }
+    },
+	{
+	  "projectID": 306549,
+	  "fileID": 2906537,
+	  "required": true
+	}
   ],
   "overrides": "overrides"
 }
