Blacklist a Ton of mobs from Dagger of Sacrifice
I went through every entity in the game via Tellme dump, this is pretty much everything that would cause issues to be able to do this on.
I've also left some intentional holes for silly farms.

--- a/Client/overrides/config/bloodmagic/bloodmagic.cfg
+++ b/Client/overrides/config/bloodmagic/bloodmagic.cfg
@@ -125,6 +125,276 @@ values {
         ocelot;100
         pig;100
         rabbit;100
+ 		ancientwarfarenpc:aw_npc_bard;0
+		ancientwarfarenpc:aw_npc_combat;0
+		ancientwarfarenpc:aw_npc_courier;0
+		ancientwarfarenpc:aw_npc_priest;0
+		ancientwarfarenpc:aw_npc_siege_engineer;0
+		ancientwarfarenpc:aw_npc_trader;0
+		ancientwarfarenpc:aw_npc_worker;0
+		ancientwarfarenpc:faction.archer;0
+		ancientwarfarenpc:faction.archer.elite;0
+		ancientwarfarenpc:faction.bard;0
+		ancientwarfarenpc:faction.cavalry;0
+		ancientwarfarenpc:faction.civilian.female;0
+		ancientwarfarenpc:faction.civilian.male;0
+		ancientwarfarenpc:faction.leader;0
+		ancientwarfarenpc:faction.leader.elite;0
+		ancientwarfarenpc:faction.mounted_archer;0
+		ancientwarfarenpc:faction.priest;0
+		ancientwarfarenpc:faction.siege_engineer;0
+		ancientwarfarenpc:faction.soldier;0
+		ancientwarfarenpc:faction.soldier.elite;0
+		ancientwarfarenpc:faction.spellcaster;0
+		ancientwarfarenpc:faction.trader;0
+		ancientwarfarestructure:aw_gate;0
+		ancientwarfarevehicle:vehicle;0
+		artifacts:mimic;0
+		atum:assassin;0
+		atum:barbarian;0
+		atum:bonestorm;0
+		atum:brigand;0
+		atum:camel;0
+		atum:desert_wolf;0
+		atum:forsaken;0
+		atum:mummy;0
+		atum:nomad;0
+		atum:stoneguard;0
+		atum:stonewarden;0
+		atum:sunspeaker;0
+		atum:tarantula;0
+		atum:warlord;0
+		atum:wraith;0
+		battletowers:golem;0
+		dungeontactics:towerguardian;0
+		dungeonsmod:traveller;0
+		eerieentities:cursed_armor;0
+		eerieentities:nether_knight;0
+		ebwizardry:evil_wizard;0
+		ebwizardry:wizard;0
+		erebus:erebus.animated_bamboo_crate;0
+		erebus:erebus.animated_block;0
+		erebus:erebus.animated_chest;0
+		erebus:erebus.antlion;0
+		erebus:erebus.antlion_mini_boss;0
+		erebus:erebus.bed_bug;0
+		erebus:erebus.beetle;0
+		erebus:erebus.beetle_larva;0
+		erebus:erebus.black_ant;0
+		erebus:erebus.black_widow;0
+		erebus:erebus.bog_maw;0
+		erebus:erebus.bombardier_beetle;0
+		erebus:erebus.bombardier_beetle_larva;0
+		erebus:erebus.bot_fly;0
+		erebus:erebus.bot_fly_larva;0
+		erebus:erebus.centipede;0
+		erebus:erebus.chameleon_tick;0
+		erebus:erebus.cicada;0
+		erebus:erebus.crop_weevil;0
+		erebus:erebus.crushroom;0
+		erebus:erebus.dragon_fly;0
+		erebus:erebus.fire_ant;0
+		erebus:erebus.fire_ant_soldier;0
+		erebus:erebus.fire_resistent_item;0
+		erebus:erebus.fly;0
+		erebus:erebus.fungal_weevil;0
+		erebus:erebus.gas_vent;0
+		erebus:erebus.glow_worm;0
+		erebus:erebus.goo_ball;0
+		erebus:erebus.grasshopper;0
+		erebus:erebus.honey_pot_ant;0
+		erebus:erebus.jumping_spider;0
+		erebus:erebus.lava_web_spider;0
+		erebus:erebus.locust;0
+		erebus:erebus.magma_crawler;0
+		erebus:erebus.midge_swarm;0
+		erebus:erebus.money_spider;0
+		erebus:erebus.mosquito;0
+		erebus:erebus.moth;0
+		erebus:erebus.pond_skater;0
+		erebus:erebus.praying_mantis;0
+		erebus:erebus.punchroom;0
+		erebus:erebus.rhino_beetle;0
+		erebus:erebus.scorpion;0
+		erebus:erebus.scytodes;0
+		erebus:erebus.solifuge;0
+		erebus:erebus.solifuge_small;0
+		erebus:erebus.stag_beetle;0
+		erebus:erebus.tarantula;0
+		erebus:erebus.tarantula_baby;0
+		erebus:erebus.tarantula_egg;0
+		erebus:erebus.titan_beetle;0
+		erebus:erebus.umber_golem;0
+		erebus:erebus.umber_golem_idol;0
+		erebus:erebus.velvet_worm;0
+		erebus:erebus.wasp;0
+		erebus:erebus.woodlouse;0
+		erebus:erebus.woodlouse_ball;0
+		erebus:erebus.worker_bee;0
+		erebus:erebus.zombie_ant;0
+		erebus:erebus.zombie_ant_soldier;0
+		mod_lavacow:avaton;0
+		mod_lavacow:banshee;0
+		mod_lavacow:boneworm;0
+		mod_lavacow:foglet;0
+		mod_lavacow:ithaqua;0
+		mod_lavacow:lilsludge;0
+		mod_lavacow:salamander;0
+		mod_lavacow:scarecrow;0
+		mod_lavacow:sludgelord;0
+		mod_lavacow:undeadswine;0
+		mod_lavacow:undertaker;0
+		mod_lavacow:vespa;0
+		mod_lavacow:vespacocoon;0
+		iceandfire:amphithere;0
+		iceandfire:cyclops;0
+		iceandfire:deathworm;0
+		iceandfire:dread_beast;0
+		iceandfire:dread_ghoul;0
+		iceandfire:dread_horse;0
+		iceandfire:dread_knight;0
+		iceandfire:dread_lich;0
+		iceandfire:dread_scuttler;0
+		iceandfire:dread_thrall;0
+		iceandfire:firedragon;0
+		iceandfire:gorgon;0
+		iceandfire:icedragon;0
+		iceandfire:if_cockatrice;0
+		iceandfire:if_hydra;0
+		iceandfire:if_troll;0
+		iceandfire:myrmex_queen;0
+		iceandfire:myrmex_royal;0
+		iceandfire:myrmex_sentinel;0
+		iceandfire:myrmex_soldier;0
+		iceandfire:myrmex_swarmer;0
+		iceandfire:myrmex_worker;0
+		iceandfire:seaserpent;0
+		iceandfire:siren;0
+		iceandfire:stymphalianbird;0
+		illagers_plus:illager_king;0
+		mekanism:robit;0
+		midnight:rifter;0
+		mowziesmobs:barako;0
+		mowziesmobs:ferrous_wroughtnaut;0
+		mowziesmobs:foliaath;0
+		mowziesmobs:frostmaw;0
+		mowziesmobs:naga;0
+		thaumcraft:golem;0
+		thaumcraft:cultistleader;0
+		thaumcraft:cultistportal;0
+		thaumcraft:eldritchcrab;0
+		thaumcraft:eldritchguardian;0
+		thaumcraft:inhabitedzombie;0
+		thaumcraft:turretbasic;0
+		thaumcraft:turretadvanced;0
+		thaumicaugmentation:autocaster;0
+		thaumicaugmentation:autocaster_eldritch;0
+		thaumicaugmentation:eldritch_guardian;0
+		thaumicaugmentation:shield_focus;0
+		theaurorian:crystallinesprite;0
+		theaurorian:disturbedhollow;0
+		theaurorian:moonacolyte;0
+		theaurorian:spiderling;0
+		theaurorian:spirit;0
+		theaurorian:undeadknight;0
+		thebetweenlands:angler;0
+		thebetweenlands:ash_sprite;0
+		thebetweenlands:blood_snail;0
+		thebetweenlands:boulder_sprite;0
+		thebetweenlands:chiromaw;0
+		thebetweenlands:chiromaw_greebling_rider;0
+		thebetweenlands:chiromaw_hatchling;0
+		thebetweenlands:chiromaw_matriarch;0
+		thebetweenlands:crypt_crawler;0
+		thebetweenlands:draeton_chiromaw_tamed;0
+		thebetweenlands:draeton_dragonfly;0
+		thebetweenlands:draeton_firefly;0
+		thebetweenlands:dreadful_mummy;0
+		thebetweenlands:emberling;0
+		thebetweenlands:emberling_shaman;0
+		thebetweenlands:fortress_boss;0
+		thebetweenlands:gas_cloud;0
+		thebetweenlands:greebling;0
+		thebetweenlands:greebling_volarpad_floater;0
+		thebetweenlands:large_sludge_worm;0
+		thebetweenlands:leech;0
+		thebetweenlands:lurker;0
+		thebetweenlands:mire_snail_egg;0
+		thebetweenlands:multipart_dummy;0
+		thebetweenlands:peat_mummy;0
+		thebetweenlands:pyrad;0
+		thebetweenlands:shambler;0
+		thebetweenlands:silt_crab;0
+		thebetweenlands:sludge;0
+		thebetweenlands:sludge_jet;0
+		thebetweenlands:sludge_menace;0
+		thebetweenlands:sludge_menace_multipart_dummy;0
+		thebetweenlands:small_sludge_worm;0
+		thebetweenlands:smoll_sludge;0
+		thebetweenlands:spirit_tree_face_large;0
+		thebetweenlands:spirit_tree_face_small;0
+		thebetweenlands:stalker;0
+		thebetweenlands:swamp_hag;0
+		thebetweenlands:swarm;0
+		thebetweenlands:tamed_spirit_tree_face;0
+		thebetweenlands:tar_beast;0
+		thebetweenlands:termite;0
+		thebetweenlands:tiny_sludge_worm;0
+		thebetweenlands:tiny_sludge_worm_helper;0
+		thebetweenlands:wall_lamprey;0
+		thebetweenlands:wall_living_root;0
+		thebetweenlands:wight;0
+		thebetweenlands:wild_emberling;0
+		thesummoner:summoner;0
+		twilightforest:adherent;0
+		twilightforest:armored_giant;0
+		twilightforest:blockchain_goblin;0
+		twilightforest:death_tome;0
+		twilightforest:fire_beetle;0
+		twilightforest:giant_miner;0
+		twilightforest:goblin_knight_lower;0
+		twilightforest:goblin_knight_upper;0
+		twilightforest:hedge_spider;0
+		twilightforest:helmet_crab;0
+		twilightforest:hostile_wolf;0
+		twilightforest:hydra_head;0
+		twilightforest:ice_crystal;0
+		twilightforest:king_spider;0
+		twilightforest:kobold;0
+		twilightforest:lich_minion;0
+		twilightforest:maze_slime;0
+		twilightforest:mini_ghast;0
+		twilightforest:minotaur;0
+		twilightforest:mist_wolf;0
+		twilightforest:mosquito_swarm;0
+		twilightforest:pinch_beetle;0
+		twilightforest:quest_ram;0
+		twilightforest:redcap;0
+		twilightforest:redcap_sapper;0
+		twilightforest:rising_zombie;0
+		twilightforest:skeleton_druid;0
+		twilightforest:slime_beetle;0
+		twilightforest:snow_guardian;0
+		twilightforest:stable_ice_core;0
+		twilightforest:swarm_spider;0
+		twilightforest:tower_broodling;0
+		twilightforest:tower_ghast;0
+		twilightforest:tower_golem;0
+		twilightforest:tower_termite;0
+		twilightforest:troll;0
+		twilightforest:unstable_ice_core;0
+		twilightforest:winter_wolf;0
+		twilightforest:wraith;0
+		twilightforest:yeti;0
+		totemic:baykok;0
+		vampirism:advanced_hunter;0
+		vampirism:advanced_vampire;0
+		vampirism:blinding_bat;0
+		vampirism:hunter_trainer;0
+		vampirism:hunter_trainer_dummy;0
+		vampirism:vampire_baron;0
+		vampirism:vampire_minion_s;0
+		vampirism:villager_angry;0
      >
 
     # Will rewrite any default meteor types with new versions.
