--- a/Client/overrides/config/tips.cfg
+++ b/Client/overrides/config/tips.cfg
@@ -14,6 +14,7 @@ general {
 	Magic is the key to incredible power!
 	Tech is the key to tons of resources!
 	In MC Eternal, Skystone Meteorites are only found in The Beneath
+	Never touched a certain mod before? Join the Discord for help!
      >
 
     # The color of the actual tip text. [default: FFFFFF]
