--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -1360,6 +1360,7 @@ modpacks {
         parabox:parabox
         immersivengineering:metal_device1
         astralsorcery:blockcollectorcrystal
+        yabba:item_barrel
      >
 
     # Crops & leaves that are blocked from harvesting (Brush Scythe and Tree Scythe). A star is for a wildcard  [default: [terraqueous:pergola], [harvestcraft:*_sapling]]
