--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1632,7 +1632,12 @@
       "projectID": 400488,
       "fileID": 3024769,
       "required": true
-    }
+    },
+	{
+	  "projectID": 306549,
+	  "fileID": 2906537,
+	  "required": true
+	}
   ],
   "overrides": "overrides"
 }
