Blacklist lots of Item holders in improvedbackpacks.cfg + disable Ender backpack durability

--- a/Client/overrides/config/improvedbackpacks.cfg
+++ b/Client/overrides/config/improvedbackpacks.cfg
@@ -7,14 +7,48 @@ backpacks {
         compactstorage:backpack
         quantumstorage:quantum_bag
         thebetweenlands:lurker_skin_pouch
-		cyclicmagic:storage_bag
-		extrautils2:goldenbagofholding
+	cyclicmagic:storage_bag
+	extrautils2:goldenbagofholding
+	actuallyadditions:item_bag
+	thermalexpansion:satchel
+	littletiles:container
+	chiselsandbits:bit_bag
+	danknull:dank_null_0
+	danknull:dank_null_1
+	danknull:dank_null_2
+	danknull:dank_null_3
+	danknull:dank_null_4
+	danknull:dank_null_5
+	danknull:dank_null_6
+	appliedenergistics:storage_cell_1k
+	appliedenergistics:storage_cell_4k
+	appliedenergistics:storage_cell_16k
+	appliedenergistics:storage_cell_64k
+	appliedenergistics:fluid_storage_cell_1k
+	appliedenergistics:fluid_storage_cell_4k
+	appliedenergistics:fluid_storage_cell_16k
+	appliedenergistics:fluid_storage_cell_64k
+	appliedenergistics:portable_cell
+	ancientwarfare:backpack
+	extracells:storage.physical
+	extracells:storage.gas
+	rats:rat_sack
+	roots:component_pouch
+	roots:apothecary_pouch
+	thaumcraft:focus_pouch
+	akashictome:akashictome
+	openblocks:luggage
+	thermalexpansion:strongbox
+	immersiveengineering:toolbox
+	immersiveengineering:wooden_device0
+	rftools:modular_storage
+	rftools:storage_module
      >
 
     # List of ore dictionary names that player will be unable to put in a backpack [default: [backpack]]
     S:blacklisted_ore_dict_names <
         backpack
-		bag
+	bag
      >
 
     # Is it possible to dye backpacks [default: true]
@@ -27,7 +61,7 @@ backpacks {
     B:ender_backpack_enabled=true
 
     # Do Ender Backpacks have durability [default: true]
-    B:ender_backpack_has_durability=true
+    B:ender_backpack_has_durability=false
 
     # Whether to render 3d backpacks in gui [default: false]
     B:gui_3d_backpacks=false
